withdrawl and repayment flow for UI testing

--- a/new-initiatives/personal-loan/repayment/RP_flow_2.yaml
+++ b/new-initiatives/personal-loan/repayment/RP_flow_2.yaml
@@ -5,8 +5,8 @@ appId: "com.rupeek.customer.debug"
 - assertVisible: "Upcoming EMIs"
 - tapOn: "Upcoming EMIs"
 
-- assertVisible: "Previous EMIs"
-- tapOn: "Previous EMIs"
+- assertVisible: "Paid EMIs"
+- tapOn: "Paid EMIs"
 
 - tapOn: "Upcoming EMIs"
 - assertVisible: "On-time payment help boost your credit score."
